--- a/libft/Makefile
+++ b/libft/Makefile
@@ -14,7 +14,7 @@ SRCS = ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
 	ft_memmove.c ft_memchr.c ft_memcmp.c ft_calloc.c ft_toupper.c \
 	ft_tolower.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
 	ft_isprint.c ft_strlcpy.c ft_substr.c ft_atoi.c ft_strnstr.c \
-	ft_strlcat.c
+	ft_strlcat.c get_next_line.c
 
 BONUS_SRCS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c \
 		ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c \
